# Markov-Chain-Text-Generation-App

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
dokumentaatio/: Viikkoraportti 1.md  käyttöohje.md  testausdokumentaatio.md  toteutusdokumentti.md  vaatimusmäärittely.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py
src/UI/: ui.py
src/data_analyzation/: data_analysis.py  got1.txt  got2.txt
src/markovchain/: markov.py
src/tests/data_analyzation/: data_analyzation_test.py
src/tests/markovchain/: markov_test.py
src/tests/trie/: trie_test.py
src/trie/: trie.py  trie_tree.py
